# tbd_audio_stack

./: .gitignore  CHANGELOG.md  README.md  requirements.txt
.github/workflows/: main.yaml
tbd_amazon_transcribe/: CMakeLists.txt  README.md  package.xml
tbd_amazon_transcribe/launch/: run_amazon_recognition.launch  run_amazon_recognition_base.launch  run_amazon_recognition_w_agent_signal.launch  run_recognition.launch  run_recognition_w_agent_signal.launch
tbd_amazon_transcribe/scripts/: http2_recognition_node.py  old_recognition_node.py  recognition_node.py  recognition_node_long_duration.py
tbd_audio_capture/: CMakeLists.txt  package.xml
tbd_audio_capture/launch/: capture.launch
tbd_audio_capture/scripts/: converter_node.py
tbd_audio_msgs/: CMakeLists.txt  package.xml
tbd_audio_msgs/msg/: FilterStamped.msg  Utterance.msg  VADStamped.msg
tbd_audio_recognition/: CMakeLists.txt  package.xml
tbd_audio_recognition/launch/: run_recognition.launch
tbd_audio_recognition_deepspeech/: CMakeLists.txt  package.xml
tbd_audio_recognition_deepspeech/launch/: run_recognition.launch  run_recognition_w_agent_signal.launch
tbd_audio_recognition_deepspeech/scripts/: recognition_node.py  simple_tts_node.py
tbd_audio_speech_signal_relay/: CMakeLists.txt  package.xml
tbd_audio_speech_signal_relay/scripts/: speech_signal_vad_merger_node.py
tbd_audio_stack/: CMakeLists.txt  package.xml
tbd_audio_vad/: CMakeLists.txt  package.xml
tbd_audio_vad/scripts/: filter_node.py  vad_node.py
